--- a/tour.css
+++ b/tour.css
@@ -172,7 +172,7 @@ body {
     transform: scale(0.95); }
 
 .header {
-  background: linear-gradient(to bottom right, rgba(4, 68, 4, 0.945), rgba(4, 179, 33, 0.918)), url("../img/tour3.jpg");
+  background: linear-gradient(to bottom right, rgba(4, 68, 4, 0.945), rgba(4, 179, 33, 0.918)), url("img/tour3.jpg");
   background-size: cover;
   height: 95vh;
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
@@ -195,7 +195,7 @@ body {
 .section-features {
   margin-top: -15vh;
   padding: 25rem 0rem;
-  background: linear-gradient(to bottom right, rgba(4, 68, 4, 0.945), rgba(4, 179, 33, 0.918)), url("../img/tour2.jpg");
+  background: linear-gradient(to bottom right, rgba(4, 68, 4, 0.945), rgba(4, 179, 33, 0.918)), url("img/tour2.jpg");
   background-size: cover;
   clip-path: polygon(100% 0, 100% 85%, 0% 100%, 0 15%);
   background-position: bottom; }
@@ -292,7 +292,7 @@ body {
             height: 50rem; }
             .tour-3-colums .tour-box .card-side--front-background {
               height: 29rem;
-              background: linear-gradient(to bottom right, rgba(255, 123, 0, 0.8), rgba(255, 165, 0, 0.8)), url("../img/tour3.jpg");
+              background: linear-gradient(to bottom right, rgba(255, 123, 0, 0.8), rgba(255, 165, 0, 0.8)), url("img/tour3.jpg");
               background-size: cover;
               clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
               background-position: bottom; }
@@ -300,7 +300,7 @@ body {
             height: 50rem; }
             .tour-3-colums .tour-box .card-side--front-2-background {
               height: 29rem;
-              background: linear-gradient(to bottom right, rgba(5, 150, 101, 0.8), rgba(65, 216, 42, 0.8)), url("../img/tour4.jpg");
+              background: linear-gradient(to bottom right, rgba(5, 150, 101, 0.8), rgba(65, 216, 42, 0.8)), url("img/tour4.jpg");
               background-size: cover;
               clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
               background-position: bottom; }
@@ -308,7 +308,7 @@ body {
             height: 50rem; }
             .tour-3-colums .tour-box .card-side--front-3-background {
               height: 29rem;
-              background: linear-gradient(to bottom right, rgba(0, 68, 255, 0.8), rgba(0, 162, 255, 0.8)), url("../img/tour1.jpg");
+              background: linear-gradient(to bottom right, rgba(0, 68, 255, 0.8), rgba(0, 162, 255, 0.8)), url("img/tour1.jpg");
               background-size: cover;
               clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
               background-position: bottom; }
